# retina-disease-classifier

./: CMakeLists.txt  README.md  helpers.cpp  helpers.h  main.cpp  retinaFindings.cpp  retinaFindings.h
database/: druse.csv  exudate.csv  hemorrhage.csv
project/: CMakeLists.txt  main.cpp
